# chessagon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html  index.js  package-lock.json  package.json  webpack.config.cjs
js/: board.js  index.js  init.js  mouse.js
signalling/src/: auth.rs  db.rs  lib.rs  poll.rs  room.rs
src/: chat.html  directions.rs  game.rs  glue.js  index.html  lib.rs  piece.rs
src/js/: assets.js  board.js  buttons.js  chat.js  glue.js  graph.js  index.js  layer.js  loader.js  menus.js  render.js  scene.js  state.js  timer.js
src/menus/: gamemode.html  gamemode.js  online.html  online.js  register.html  register.js  settings.html  settings.js
src/rust/: chat.rs  controller.rs  directions.rs  game.rs  glue.js  glue.rs  iface.rs  lib.rs  names.rs  utils.rs
src/rust/game/: board.rs  controller.rs  directions.rs  highlight.rs  mod.rs  piece.rs
src/rust/interface/: mod.rs  names.rs
src/rust/network/: buffer.rs  client.rs  connector.rs  mod.rs  p2p.rs  packet.rs  signal.rs
src/scss/: styles.scss
static/: index.html
www/: board.js  init.js
