[package]
name = "chessagon"
version = "0.1.0"
authors = ["Tocutoeltuco <tocutoeltuco@gmail.com>"]
edition = "2021"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
web-time = { version = "1.1.0", features = ["serde"] }
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.200", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
futures = { version = "0.3.30", default-features = false }
futures-channel = { version = "0.3.30", default-features = false, features = ["sink"] }
futures-timer = { version = "3.0.3", default-features = false, features = ["wasm-bindgen"] }
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "async-await-macro", "channel"] }
serde_json = "1.0.116"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Event",
  "Headers",
  "MessageEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
